Some code cleanup

--- a/SteamAccountSwitcher2/App.config
+++ b/SteamAccountSwitcher2/App.config
@@ -14,7 +14,7 @@
     </startup>
     <userSettings>
         <SteamAccountSwitcher2.Properties.Settings>
-            <setting name="steamInstallLocation" serializeAs="String">
+            <setting name="steamInstallDir" serializeAs="String">
                 <value />
             </setting>
             <setting name="Top" serializeAs="String">
